[package]
name = "octolotl"
description = "lib proxying requests to github for stability and performance"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = "5.9.0"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
thiserror = "1.0.40"
